--- a/proxy/nginx-config/nginx-custom.conf
+++ b/proxy/nginx-config/nginx-custom.conf
@@ -51,12 +51,21 @@ server {
             }
 
     location /api/v1/audit {
-                    proxy_set_header Host $host;
-                    proxy_set_header X-Real-IP $remote_addr;
-                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                    proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
 
-                    proxy_pass http://audit-service:8080/audit;
-                }
+                proxy_pass http://audit-service:8080/audit;
+            }
+
+     location /api/v1/message {
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+
+                proxy_pass http://message-service:8080/message;
+            }
 
 }
