Добавил порт на pg_db что бы через идею подключаться. Поменял путь на GET message. Добавил в консюмере многопоточную обработку сообщений

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
   pg_db:
     build: postgresql
     image: postgresql-finance:1.0.2
+    ports:
+      - 8092:5432
     environment:
       POSTGRES_USER: finance_admin
       POSTGRES_PASSWORD: 123
@@ -91,7 +93,7 @@ services:
 
 
   kafka:
-    image: wurstmeister/kafka
+    image: wurstmeister/kafka:latest
     networks:
       - kafka-network
     environment:
@@ -100,6 +102,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
       KAFKA_CREATE_TOPICS: "message:3:1"
 
   zookeeper:
